--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "@prisma/cli": "2.1.1"
+    "@prisma/cli": "^2.1.1",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
   }
 }
