--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "Starter project for Next.js + Prisma tutorial.",
   "version": "0.0.0",
   "author": {
-    "name": "Lee Robinson",
-    "email": "me@leerob.io",
-    "url": "https://leerob.io"
+    "name": "Axel Obscura",
+    "email": "axosar@gmail.com",
+    "url": "https://azul.mx"
   },
   "license": "MIT",
   "repository": {
