--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "2.1.1",
+    "antd": "^4.8.5",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
